--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
 
   backend:
-    build: ./backend
+    image: rajveer812/sharekart-backend:latest
     container_name: sharekart_backend
     ports:
       - "3002:3002"
@@ -12,7 +12,7 @@ services:
     restart: always
 
   frontend:
-    build: ./frontend
+    image: rajveer812/sharekart-frontend:latest
     container_name: sharekart_frontend
     ports:
       - "3001:80"
@@ -21,7 +21,7 @@ services:
     restart: always
 
   dashboard:
-    build: ./dashboard
+    image: rajveer812/sharekart-dashboard:latest
     container_name: sharekart_dashboard
     ports:
       - "3000:80"
